error on blurred input

--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -233,9 +233,6 @@ homemyteam.styl
 .HomeAppView--section.send-invites
   overflow                  hidden
 
-  &.send-attempt .invite-inputs input.kdinput.user-email.error
-    border-color            #f00
-
   .information
     padding                 30px 0 4px
     .invite-labels
@@ -301,6 +298,9 @@ homemyteam.styl
       border-top-left-radius    3px
       border-bottom-left-radius 3px
       transition            border-color 0.5s
+
+      &.error
+        border-color        #F2778A
 
     input.kdinput.firstname
       width                 152px
