client: adds important to margin

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -24,7 +24,7 @@ contentModal.styl
   &.kdmodal
     .kdmodal-inner
     .kdmodal-content
-      margin                0px
+      margin                0px !important
       span
         a
           color             #F2778A
@@ -236,7 +236,7 @@ contentModal.styl
       .fl
         fl()
         left                32px
-        
+
       .fr
         fr()
         right                32px
