IDE: disable expanding sidebar on IDE route changes, keep it as is

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -83,7 +83,7 @@ $stack-border-width         = 2px
     h3
       display               inline-block
       margin-left           10px
-      max-width             calc(100% - 320px)
+      max-width             calc(100% - 360px)
       text-overflow         ellipsis
       overflow              hidden
       white-space           nowrap
@@ -104,7 +104,6 @@ $stack-border-width         = 2px
       cursor                pointer
       display               inline-block
       width                 auto
-      max-width             70px
       text-overflow         ellipsis
       overflow              hidden
       white-space           nowrap
@@ -633,7 +632,7 @@ $stack-border-width         = 2px
       borderBox()
 
 
-  .kdcontextmenu
+  .stack-menu.kdcontextmenu
 
     box-shadow              0px 0px 30px rgba(0,0,0,.4)
 
