--- a/client/home/lib/styl/homemyaccount.styl
+++ b/client/home/lib/styl/homemyaccount.styl
@@ -425,11 +425,7 @@ Home My Account styles
   .filter-view
     hidden()
 
-.action-wrapper
-  cursor                    pointer
+.delete-account
+  margin                    32px 0px 30px 47px
   color                     #f2778a
-  display                   flex
-  margin-left               47px
-  height                    34px
-  margin                    -10px 10px 17px 47px
-  align-items               center
+  cursor                    pointer
