Toolbar: Banner: separated out from Toolbar logic

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -163,7 +163,7 @@ $stack-border-width         = 2px
       .tag.credential
         vendor              animation, shake .6s
 
-    &.has-warning
+    &.has-message
       height                80px
       min-height            80px !important
 
