--- a/client/home/lib/myteam/components/transferownershipbutton/styl/transferownershipbutton.styl
+++ b/client/home/lib/myteam/components/transferownershipbutton/styl/transferownershipbutton.styl
@@ -1,8 +1,8 @@
 .transferownershipbutton
   display                   flex
-  margin-left               30px
+  margin-left               10px
   align-items               center
-
+  color                     #f2778a
   .cancel-btn
     color                   #5e5e5e
     margin-right            15px
