NSE: handle busy state over stack editor globally

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -69,6 +69,9 @@ $stack-border-width         = 2px
         padding             0
         color               white
         fa                  play
+      .kdloader
+        margin-top          -7px
+        margin-left         -5px
 
     .menu-icon
       fa                    caret-down
