client: minor code improvements

--- a/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
+++ b/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
@@ -59,6 +59,9 @@
       margin-right          0px
       cursor                pointer
 
+      .transferownershipbutton
+        font-size           13px
+
       .delete-team-button
         margin-left         10px
 
