--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -365,3 +365,6 @@ homemyteam.styl
   height                    34px
   margin                    -10px 10px 17px 47px
   align-items               center
+
+  .delete-team
+    margin-right            20px
