--- a/docs/css/doc.scss
+++ b/docs/css/doc.scss
@@ -1,18 +1,25 @@
 ---
 ---
 
+body {
+  background-color: #EAEDEF;
+}
+
 main {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  max-width: 1600px;
+  max-width: 1176px;
   min-height: calc(100vh - 358px - 70px);
   box-sizing: border-box;
+  margin: 0 auto;
+  background-color: #FFFFFF;
 
   > aside {
-    flex: 1;
-    width: 360px;
+    width: 298px;
+    background-color: #FAFBFD;
     padding: 32px 0;
+    border-right: 1px solid #EAEDEF;
 
     > ul > li > a {
       font-size: 18px;
@@ -35,13 +42,12 @@ main {
       a:visited,
       a:hover {
         color: #4078c0;
-      }
-    }
 
-    li.active {
-      > a {
-        color: black;
-        font-weight: bold;
+        &.docs__section__topic {
+          color: #727272;
+          font-weight: 600;
+          font-size: 16px;
+        }
       }
     }
 
@@ -58,9 +64,8 @@ main {
   }
 
   > section {
-    flex: 3;
-    width: calc(100% - 360px);
-    padding: 32px 32px 32px 32px;
+    width: calc(100% - 299px);
+    padding: 32px 40px;
     box-sizing: border-box;
     p.citation {
       font-style: italic;
@@ -68,11 +73,25 @@ main {
   }
 
   ul {
-    padding: 12px 0 0 12px;
+    padding: 12px 0 0 30px;
   }
 
   li ul {
-    padding: 12px 0 12px 12px;
+    padding: 0;
+    border-left: 1px solid #E8E8E8;
+    margin-top: 12px;
+
+    li {
+      padding: 2px 0 2px 20px;
+
+      &.active {
+        background-color: #F4F4F4;
+
+        a {
+          color: #515151;
+        }
+      }
+    }
   }
 
   li ul ul ul {
