--- a/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
+++ b/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
@@ -18,6 +18,9 @@
     overflow                hidden
     overflow-y              visible
 
+    &:empty
+      display               none
+
   .single-group-info
     display                 flex
     background              #FFF
@@ -61,6 +64,13 @@
 
       .transferownershipbutton
         font-size           13px
+
+        .transfer-ready
+          color #fff
+          background-color #f2778a
+          padding 7px 12px
+          border none
+          border-radius 4px
 
       .delete-team-button
         margin-left         10px
