minor styl updates

--- a/client/app/lib/components/contentModal/styl/contentModal.styl
+++ b/client/app/lib/components/contentModal/styl/contentModal.styl
@@ -323,10 +323,6 @@ main.main-container
       shadow                inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px 1px rgba(81,167,232,0.5)
 
 
-  &.tabview
-    .kdscrollview
-      max-height             312px
-
   main.kdscrollview
     max-height              350px
     margin                  0px
@@ -378,6 +374,9 @@ main.main-container
     .kdtabpaneview
       height                100% !important
 
+.ContentModal.content-modal.verify-password
+.ContentModal.content-modal.delete-account-modal
+  z-index                   20001
 
 .ContentModal.content-modal.stack-script
   height                    700px !important
