StackEditor: allow users to try out new stack editor

--- a/client/home/lib/styl/home.styl
+++ b/client/home/lib/styl/home.styl
@@ -213,6 +213,9 @@ $subtleColor                = #A59999
   &.primary
     color                   #769ECC
 
+  &.nse
+    margin-left             10px
+
   &.danger
     color                   #e14a35
     &.readonly
