New Stack Editor: allow users to switch back to old stack editor

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -195,6 +195,11 @@ $stack-border-width         = 2px
       margin-right          12px
       fl()
 
+    .old-stack-editor
+      cursor                pointer
+      margin-right          40px
+      fr()
+
 
   .flex-view
 
