docs: update intercomLauncher to use endpoint

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -71,6 +71,7 @@
       $(this).parent().addClass('active');
   });
 </script>
+<script type="text/javascript" src="{{ site.url }}/js/requests.js" /></script>
 <script type="text/javascript">
   {% include js/intercomLauncher.js %}
 </script>
