refactor banner and index items

--- a/docs/css/doc.scss
+++ b/docs/css/doc.scss
@@ -12,7 +12,7 @@ main {
   max-width: 1176px;
   min-height: calc(100vh - 358px - 70px);
   box-sizing: border-box;
-  margin: 20px auto 0;
+  margin: 20px auto 80px;
   background-color: #FFFFFF;
   border-radius: 3px;
   overflow: hidden;
