--- a/docs/_includes/css/docs-home.css
+++ b/docs/_includes/css/docs-home.css
@@ -148,41 +148,6 @@
   width: 400px;
 }
 
-.docs__search {
-  position: relative;
-}
-
-.docs__search input {
-  border-radius: 3px;
-  border: 1px solid #DCDCDC;
-  font-family: proxima-nova;
-  padding: 10px 18px;
-  font-size: 15px;
-  color: #989898;
-  box-sizing: border-box;
-  transition: width 1s;
-}
-
-.docs__search input.expanded {
-  width: 775px;
-}
-
-.docs__search a.icon-magnify-link {
-  height: 30px;
-  width: 30px;
-  display: block;
-  position: absolute;
-  top: 5px;
-  right: 3px;
-  overflow: hidden;
-}
-
-.docs__search a.icon-magnify-link svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .docs__index__body__content a.docs__section__topic {
   color: #727272;
   font-weight: 700;
@@ -203,40 +168,6 @@
 
 .docs__index__results {
   right: 0;
-}
-
-.docs__index__results {
-  position: absolute;
-  top: 39px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  width: 773px;
-}
-
-.docs__index__results__header {
-  background-color: #F8FBFF;
-  color: #989898;
-  font-size: 14px;
-  text-transform: uppercase;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-  padding: 14px 10px 10px;
-}
-
-.docs__index__results__row {
-  padding: 14px 10px 10px;
-  background-color: #ffffff;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-}
-
-.docs__index__results__row .results__row__title {
-  color: #515151;
-  font-size: 16px;
-  display: block;
-}
-
-.docs__index__results__row .results__row__description {
-  color: #A8A8A8;
-  font-size: 12px;
 }
 
 .clearfix:after {
@@ -319,8 +250,13 @@
     float: none;
   }
 
-  .docs__index__body__header .docs__search input {
+  .docs__index__body__header .docs__search input,
+  .docs__index__body__header .docs__search input.expanded {
     width: 100%;
+  }
+
+  .docs__search input.expanded {
+    width: 775px;
   }
 
   .docs__index__items {
@@ -360,6 +296,23 @@
   .docs__index__item__links {
     width: auto;
     margin-top: 0;
+  }
+
+  .docs__index__results {
+    left: 0;
+    width: 100% !important;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .docs__search input.expanded {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .docs__search input.expanded {
+    width: 500px;
   }
 }
 
