trasnferownershipbuttonm: style and copy updates

--- a/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
+++ b/client/home/lib/account/deleteaccount/styl/deleteaccount.styl
@@ -14,7 +14,7 @@
 
     border                  1px solid #ececec
     margin-top              30px
-    max-height              400px
+    max-height              427px
     overflow                hidden
     overflow-y              visible
 
@@ -51,7 +51,7 @@
       r-sprite              app, team_logo
 
     .team-name
-      max-width             110px
+      max-width             140px
       text-overflow         ellipsis
       overflow              hidden
 
@@ -74,6 +74,9 @@
 
       .delete-team-button
         margin-left         10px
+        background-color    #fff
+        border              1px solid #67a2ee
+        color               #67a2ee
 
     .select-box
       flex                  1 0 auto
