--- a/client/home/lib/myteam/components/transferownershipbutton/styl/transferownershipbutton.styl
+++ b/client/home/lib/myteam/components/transferownershipbutton/styl/transferownershipbutton.styl
@@ -10,5 +10,22 @@
   .select-box
     flex                    1 0 auto
     margin-right            10px
-    min-width               100px
-    max-width               180px
+    min-width               70px
+    max-width               130px
+
+.transfer-ownership-not-possible
+  rel()
+  margin-right              21px
+  .transfernotpossible
+    abs()
+    border                  1px solid #727272
+    background-color        #727272
+    color                   white
+    border-radius           50%
+    size                    14px 14px
+    top                     3px
+    right                   -21px
+    &:before
+      content               '?'
+      abs                   0 0 -5px 4px
+
