myteam: add unvisible anchor tag to navigate directly to button

--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -366,3 +366,10 @@ homemyteam.styl
   margin                    -10px 10px 17px 47px
   align-items               center
 
+  .transfer-ownership-not-possible
+    .transfernotpossible
+      top 0px
+
+      &:before
+        bottom -2px
+
