client: jekyll: improve favicons

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -6,7 +6,20 @@
   <title>{{ page.title || site.title }}</title>
   <meta name="keywords" content="integrated development environment, cloud ide, dev environment, cloud development environment, cloud editor, virtual dev environment, web based ide, test environment, docker, aws, vagrant, azure, rackspace">
   <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.description}}{% endif %}">
-  <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon.png">
+
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/assets/favicon/apple-touch-icon.png?v=wAvxkwgmmY">
+  <link rel="icon" type="image/png" href="{{ site.url }}/assets/favicon/favicon-32x32.png?v=wAvxkwgmmY" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.url }}/assets/favicon/favicon-16x16.png?v=wAvxkwgmmY" sizes="16x16">
+  <link rel="manifest" href="{{ site.url }}/assets/favicon/manifest.json?v=wAvxkwgmmY">
+  <link rel="mask-icon" href="{{ site.url }}/assets/favicon/safari-pinned-tab.svg?v=wAvxkwgmmY" color="#5271a7">
+  <link rel="shortcut icon" href="{{ site.url }}/assets/favicon.ico?v=wAvxkwgmmY">
+  <meta name="apple-mobile-web-app-title" content="Koding">
+  <meta name="application-name" content="Koding">
+  <meta name="msapplication-TileColor" content="#5271a7">
+  <meta name="msapplication-TileImage" content="{{ site.url }}/assets/favicon/mstile-144x144.png?v=wAvxkwgmmY">
+  <meta name="msapplication-config" content="{{ site.url }}/assets/favicon/browserconfig.xml?v=wAvxkwgmmY">
+  <meta name="theme-color" content="#d9e0ec">
 
   <!-- Google+ -->
   <link rel="publisher" href="https://plus.google.com/{{site.googleplus}}"/>
